# framework

./: environment.yml  pyproject.toml  requirements.txt  setup.py
plugins/bashenvironmentmanager/: scripts.py
src/framework/: cli.py
src/framework/config/_build_resources/: __init__.py
