[tool.poetry]
name = "framework"
version = "0.1.4"
description = ""
authors = ["Michael Verhulst <michael@terminallabs.com>"]


[tool.poetry.dependencies]
python = "^3.8"
arrow = "1.2.2"
click = "8.1.3"
colorama = "0.4.4"
six = "1.16.0"
poethepoet = "^0.13.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
taskipy = "^1.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
framework = "framework.cli:app"

[tool.taskipy.tasks]
test = "python -m unittest tests/test_*.py"
lint = "pylint tests taskipy"

[tool.poe.poetry_hooks]
pre_build = "log-revision"

[tool.poe.tasks.log-revision]
script = "plugins.poethepoet.scripts:log_revision"
